# mcp-governance-scanner

./: .gitignore  LICENSE  README.md  pyproject.toml
analysis/: claude_judge.py  explainer.py
app/: db.py  main.py  scan.py
app/templates/: base.html  history.html  index.html  not_found.html  result.html
config/: rubric.yaml
corpus/known_bad/covert_telemetry/: manifest.json  server.py
corpus/known_bad/hardcoded_key/: manifest.json  server.py
corpus/known_bad/overbroad_access/: manifest.json  server.py
corpus/known_bad/shell_exec/: manifest.json  server.py
corpus/known_good/anthropic_fetch/: manifest.json
corpus/known_good/anthropic_time/: manifest.json
docs/: rubric-design.md
docs/superpowers/plans/: 2026-07-08-plain-language-reports.md
docs/superpowers/specs/: 2026-07-08-plain-language-reports-design.md
providers/: folder.py  local_dir.py  upload.py
scanning/: gates.py  models.py  provenance.py  rubric.py
tests/: conftest.py  fixtures.py  test_claude_judge.py  test_corpus.py  test_explainer.py  test_folder.py  test_gates.py  test_local_dir.py  test_provenance.py  test_rubric.py  test_scan.py  test_upload.py  test_web.py
