[project]
name = "mcp-security-scanner"
version = "0.1.0"
description = "Static-analysis governance scanner for MCP servers: hard gates + scored rubric + explained verdict."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
# httpx2 is what starlette>=1.3 TestClient uses (plain httpx is deprecated there)
dev = ["pytest>=8.0", "httpx2>=2.0"]
claude = ["anthropic>=0.60"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
